trying now to fix the spacing between images

--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ footer p {
 
 .social-icons {
     display: flex;
-    gap: 1000px;
+    gap: 100px;
     margin-top: 20px;
 }
 
@@ -62,5 +62,4 @@ footer p {
 .social-icons img {
     width: 50px;
     height: 50px;
-    filter: invert(30%);
 }
